--- a/udemy/example-voting-app-kub/voting-app-pod.yaml
+++ b/udemy/example-voting-app-kub/voting-app-pod.yaml
@@ -10,4 +10,4 @@ spec:
     - name: voting-app
       image: dockersamples/examplevotingapp_vote
       port:
-      - containerPort: 80a
+      - containerPort: 80
