--- a/udemy/example-voting-app-kub/redis-pod.yaml
+++ b/udemy/example-voting-app-kub/redis-pod.yaml
@@ -2,12 +2,12 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: redis-pod
-  label:
+  labels:
     name: redis-pod
     app: demo-voting-app
 spec:
   containers:
     - name: redis
       image: redis
-      port:
+      ports:
       - containerPort: 6379
