--- a/udemy/example-voting-app-kub/result-app-pod.yaml
+++ b/udemy/example-voting-app-kub/result-app-pod.yaml
@@ -2,12 +2,12 @@ apiVersion: v1
 kind: Pod
 metadata:
   name:  result-app-pod
-  label:
+  labell:
     name: result-app-pod
     app: demo-voting-app
 spec:
   containers:
     - name: result-app
       image: dockersamples/examplevotingapp_result
-      port:
+      ports:
       - containerPort: 80 
