--- a/udemy/example-voting-app-kub/voting-app-pod.yaml
+++ b/udemy/example-voting-app-kub/voting-app-pod.yaml
@@ -2,12 +2,12 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: voting-app-pod
-  label:
+  labels:
     name: voting-app-pod
     app: demo-voting-app
 spec:
   containers:
     - name: voting-app
       image: dockersamples/examplevotingapp_vote
-      port:
+      ports:
       - containerPort: 80
