--- a/udemy/example-voting-app-kub/postgres-pod.yaml
+++ b/udemy/example-voting-app-kub/postgres-pod.yaml
@@ -2,12 +2,12 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: postgres-pod
-  label:
+  labels:
     name: postgres-pod
     app: demo-voting-app
 spec:
   containers:
     - name: postgres
       image: postgres:9.4
-      port:
+      ports:
       - containerPort: 5432
