--- a/udemy/example-voting-app-kub/result-app-pod.yaml
+++ b/udemy/example-voting-app-kub/result-app-pod.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name:  result-app-pod
-  labell:
+  labels:
     name: result-app-pod
     app: demo-voting-app
 spec:
