--- a/udemy/example-voting-app-kub/postgres-pod.yaml
+++ b/udemy/example-voting-app-kub/postgres-pod.yaml
@@ -11,3 +11,6 @@ spec:
       image: postgres:9.4
       ports:
       - containerPort: 5432
+      env:
+        - name: POSTGRES_PASSWORD
+          value: 1234555
