--- a/udemy/curso-dev/wp-test/secret.yaml
+++ b/udemy/curso-dev/wp-test/secret.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: mysql-pass
+  name: secret
+type: Opaque
 data:
-  password: admin
+  test: aG9sYQo=
